<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center|bottom"
    android:layout_centerHorizontal="true"
    app:layout_constraintBottom_toBottomOf="parent"
    android:elevation="10dp"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        android:src="@drawable/home_24"
        app:tint="@color/white"
        android:contentDescription="@string/home"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_button"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        android:src="@drawable/add_24"
        app:tint="@color/white"
        android:contentDescription="@string/add_airline_or_flight"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_btn"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        android:src="@drawable/search_24"
        app:tint="@color/white"
        android:contentDescription="@string/search_for_flights"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_button"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        android:src="@drawable/help_24"
        app:tint="@color/white"
        android:contentDescription="@string/help_menu"
        />


</LinearLayout>