<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/project_6"
            android:textAlignment="viewStart"
            android:textSize="34sp" />

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:queryHint="@string/search_hint"
            android:id="@+id/search_bar"
            app:iconifiedByDefault="false"
            ></androidx.appcompat.widget.SearchView>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/list_items"
            >
        </ListView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_button"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        android:src="@drawable/add_24"
        app:tint="@color/white"
        android:contentDescription="@string/add_airline_or_flight"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>