<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayoutSearch"
    tools:context=".SearchFlight">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="290dp"
        android:layout_centerHorizontal="true"
        android:minWidth="380dp"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/search_flight"
                android:textStyle="bold"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airline_name"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/airlineNameSearch"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/airline_name_eg"
                    android:textColorHint="@color/gray"
                    android:labelFor="@+id/airlineNameSearch"
                    android:id="@+id/airlineNameTxtSearch"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Source Airport"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/flightSrcSearch"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/src_eg"
                    android:textColorHint="@color/gray"
                    android:labelFor="@+id/flightSrcSearch"
                    android:id="@+id/srcTxtSearch"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destination Airport"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/destSearch"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/dest_eg"
                    android:textColorHint="@color/gray"
                    android:labelFor="@+id/destSearch"
                    android:id="@+id/destTxtSearch"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    >
                </EditText>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginVertical="5dp"
                >

                <Button
                    android:id="@+id/search_flights_btn"
                    android:layout_width="130sp"
                    android:layout_height="70sp"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/search_btn_desc"
                    android:minHeight="48dp"
                    android:text="Search"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include layout="@layout/menu" />

</RelativeLayout>