<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DisplayAirline">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="290dp"
        android:minWidth="380dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Flight Number"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/flight_num_eg"
                    android:textColorHint="@color/gray"
                    android:id="@+id/flightNumberDisplay"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    android:inputType="numberDecimal"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="From"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/src_eg"
                    android:id="@+id/srcDisplay"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    android:textColorHint="@color/gray"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/destDisplay"
                    android:hint="@string/dest_eg"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    android:textColorHint="@color/gray"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Departs at"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/departure_eg"
                    android:id="@+id/departureDisplay"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="5dp"
                    android:textColorHint="@color/gray"
                    >
                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Arrives at"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:hint="@string/arrival_eg"
                    android:id="@+id/arrivalDisplay"
                    android:minHeight="48dp"
                    android:textColorHint="@color/gray"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Arrives at"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:hint="@string/duration_eg"
                    android:id="@+id/totalDurationDisplay"
                    android:minHeight="48dp"
                    android:textColorHint="@color/gray"
                    >
                </TextView>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>